--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 body{
   margin:0;
   min-height:100vh;
-  background:url("fond.jpg") center/cover no-repeat fixed;
+  background:url("9F0E76C4-1D82-4973-A9AF-525BDDE71E91.png") center/cover no-repeat fixed;
   display:grid;
   grid-template-columns:repeat(var(--cols),1fr);
   gap:var(--gap);
